# autodev

./: CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  backlog.md  backlog_v2.md  pyproject.toml  system_design.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
autodev/: __init__.py
autodev/agents/: __init__.py  base.py  coder.py  debugger.py  planner.py  reviewer.py
autodev/cli/: __init__.py  main.py
autodev/core/: __init__.py  backlog_service.py  config.py  failure_classifier.py  orchestrator.py  phase_registry.py  run_reporter.py  runtime.py  schemas.py  state_store.py  supervisor.py  task_graph.py  task_materializer.py  workspace_manager.py
autodev/github/: __init__.py  ci_intake.py  ci_runner.py  issue_intake.py  issue_reader.py  pr_creator.py  repo_cloner.py
autodev/integrations/: INTEGRATION_GUIDE.md  base.py  (+11 more)
configs/: models.yaml  pipeline.yaml  pipelines.yaml
docs/: README.md  architecture_inventory.md  backlog.md  system_design.md  tech_spec_v01.md  tech_spec_v02.md
examples/: README.md
scripts/: ad028_experiment.py  publish_backlog_v2_issues.py
tests/: __init__.py  test_agents.py  test_backlog_service.py  test_ci_intake.py  test_cli.py  test_config.py  test_core.py  test_failure_classifier.py  test_github.py  test_github_git_adapter.py  test_integration_models.py  test_integration_registry.py  test_integrations.py  test_jira_adapter.py  test_models.py  test_orchestrator_e2e.py  test_run_reporter.py  test_scheduler.py  test_schemas.py  test_state_store.py  test_task_materializer.py  test_tools.py  test_workspace_manager.py
(+40 files in other folders)
